lunch break, footer not fixed, still transparant and overlapping buttons and stuck in the middle on index page

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -66,8 +66,3 @@ h2 {
   top: -20px;
   width: 40px;
 }
-
-#map {
-  height: 100vh;
-  box-shadow: 0 0 0 5px rgba(21, 61, 3, 0.911);
-}
